--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,3 +55,32 @@ jobs:
         with:
           repo_token: ${{secrets.GITHUB_TOKEN}}
           slack_webhook_url: ${{secrets.SLACK_WEBHOOK_URL}}
+  test:
+    runs
+    steps:
+   # Step 1: Checkout the repository and provide your AWS credentials
+    - name: Checkout repository
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+   
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-west-2
+
+   # Step 2: Add CodeGuru Reviewer Action
+    - name: AWS CodeGuru Reviewer Scanner
+      uses: aws-actions/codeguru-reviewer@v1
+      with:
+        build_root: target # build artifact(s) directory
+        s3_bucket: codeguru-reviewer-my-bucket  # S3 Bucket with "codeguru-reviewer-*" prefix
+    
+    # Step 3: Upload results into GitHub
+    - name: Upload review result
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: codeguru-results.sarif.json
+          
