--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,10 +84,10 @@ jobs:
 
    # Step 2: Add CodeGuru Reviewer Action
     - name: AWS CodeGuru Reviewer Scanner
-      uses: aws-actions/codeguru-reviewer@v1
+      uses: ./.github/vijejain/cicd-actions
       with:
-        build_root: target # build artifact(s) directory
-        s3_bucket: codeguru-reviewer-my-bucket  # S3 Bucket with "codeguru-reviewer-*" prefix
+        build_path: target # build artifact(s) directory
+        s3_bucket: codeguru-reviewer-mybucket-234  # S3 Bucket with "codeguru-reviewer-*" prefix
     
     # Step 3: Upload results into GitHub
     - name: Upload review result
