--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,7 +89,7 @@ jobs:
         build_path: target # build artifact(s) directory
         s3_bucket: codeguru-reviewer-mybucket101  # S3 Bucket with "codeguru-reviewer-*" prefix
     
-    # Step 3: Upload results into GitHub
+    # Step 3: Upload results into GitHubd
     - name: Upload review result
       uses: github/codeql-action/upload-sarif@v1
       with:
